--- a/index.html
+++ b/index.html
@@ -7,16 +7,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Dhruv's Portfolio" />
     <link rel="stylesheet" href="styles.css" />
+    <script src="https://kit.fontawesome.com/be00c4d4f3.js" crossorigin="anonymous"></script>
     <title>Dhruv | Portfolio</title>
 </head>
 
 <body>
     <header>
+         <div class="ham_nav">
+                                 <i class="fas fa-times crosss"></i>
+
+               <ul class="nav_list_ham">
+                    <a class="home active underline closees" id="nav_element1" href="#home">
+                        <li >HOME</li>
+                        <a />
+                        <a class="hobby closees" id="nav_element2" href="#hobby">
+                            <li >MY HOBBIES</li>
+                            <a / >
+                            <a class="skills closees" id="nav_element3" href="#skills">
+                                <li >SKILLS</li>
+                                <a />
+                </ul>
+            </div>
         <div class="nav">
+           
             <div class="nav_title">
                 <a href="#home">
                     <h1>DHRUV</h1>
                 </a>
+                <!-- <input type="checkbox" class="nav_input" id="click"> -->
+                <label for=""" class="menu-btn">
+                    <i class="fas fa-bars barsss"></i>
+                </label>
             </div>
             <div class="nav_details">
                 <ul class="nav_list">
